2010-07-10  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (use-region-p): Doc fix (Bug#6607).

2010-07-07  Christoph Scholtes  <cschol2112@gmail.com>

	* progmodes/python.el (python-font-lock-keywords): Add Python 2.7
	builtins (BufferError, BytesWarning, WindowsError; callables
	bin, bytearray, bytes, format, memoryview, next, print; __package__).

2010-07-07  Glenn Morris  <rgm@gnu.org>

	* play/zone.el (zone-fall-through-ws): Fix next-line ->
	forward-line fallout.

2010-07-06  Chong Yidong  <cyd@stupidchicken.com>

	* mouse.el (mouse-appearance-menu): Add docstring.

	* help.el (describe-key): Print up-event using key-description.

2010-07-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/zeroconf.el (zeroconf-resolve-service)
	(zeroconf-service-resolver-handler): Use
	`dbus-byte-array-to-string'.
	(zeroconf-publish-service): Use `dbus-string-to-byte-array'.

2010-07-03  Jan Moringen  <jan.moringen@uni-bielefeld.de>

	* net/zeroconf.el (zeroconf-service-remove-hook): New defun.

2010-06-30  Dan Nicolaescu  <dann@ics.uci.edu>

	Avoid displaying files with a nil state in vc-dir.
	* vc-dir.el (vc-dir-update): Obey the noinsert argument in all
	cases that cause insertion.
	(vc-dir-resynch-file): Tell vc-dir-update to avoid inserting files
	with a nil state.

2010-06-30  Chong Yidong  <cyd@stupidchicken.com>

	* xml.el (xml-parse-region): Avoid infloop (Bug#5281).

2010-06-29  Leo  <sdl.web@gmail.com>

	* emacs-lisp/rx.el (rx): Doc fix.  (Bug#6537)

2010-06-27  Oleksandr Gavenko  <gavenkoa@gmail.com>  (tiny change)

	* generic-x.el (bat-generic-mode): Fix regexp for command line
	switches (Bug#5719).

2010-06-27  Masatake YAMATO  <yamato@redhat.com>

	* htmlfontify.el (hfy-face-attr-for-class): Use append instead
	of nconc to avoid pure storage error (Bug#6239).

2010-06-27  Christoph  <cschol2112@googlemail.com>  (tiny change)

	* bookmark.el (bookmark-bmenu-2-window, bookmark-bmenu-other-window)